--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -1,9 +1,8 @@
 <main class="main">
   <div class="inner">
-    <h1>トップページ</h1>
     <%# ログインしているときは以下を表示する %>
       <%# <div class="greeting"> %>
-        <%# こんにちは、 %>
+         こんにちは、 
         <%# <%= link_to "ユーザー名さん", root_path, class: :greeting__link%>
       <%# </div> %>
     <%# // ログインしているときは上記を表示する %>
