--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -2,7 +2,12 @@
   <div class="inner">
     <%# ログインしているときは以下を表示する %>
       <%# <div class="greeting"> %>
-         こんにちは、 
+        <% if current_user %>
+           <div class="greeting">
+             <span>こんにちは</span><%= current_user.name %> <span>さん</span> 
+           </div>
+        <% end %>
+
         <%# <%= link_to "ユーザー名さん", root_path, class: :greeting__link%>
       <%# </div> %>
     <%# // ログインしているときは上記を表示する %>
