--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
           </div>
            <% if user_signed_in? %>
           <div class="user_nav grid-6">
-            <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
-            <%= link_to "New Proto", new_prototype_path, class: "post" %>
+            <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: :nav__btn %>
+            <%= link_to "New Proto", new_prototype_path, class: :nav__btn%>
           </div>
         <% else %>
           <div class="nav__right">
