--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -7,12 +7,16 @@
              <span>こんにちは</span><%= current_user.name %> <span>さん</span> 
            </div>
         <% end %>
-
+        
+        
+            
+           
         <%# <%= link_to "ユーザー名さん", root_path, class: :greeting__link%>
       <%# </div> %>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
+      <%= render partial: 'prototype', collection: @prototypes %>
     </div>
   </div>
 </main>
