showアクション追加

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -32,7 +32,7 @@
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
           <%# <%= form_with model: モデル名,local: true do |f|%>
             <div class="field">
-              <%# <%= f.label :hoge, "コメント" %><br />
+              <%# <%= f.label :hoge, @comments %><br />
               <%# <%= f.text_field :hoge, id:"comment_content" %>
             </div>
             <div class="actions">
