--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -30,23 +30,24 @@
       </div>
       <div class="prototype__comments">
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
-          <%# <%= form_with model: モデル名,local: true do |f|%>
+          <%= form_with model: comments,local: true do |f|%>
             <div class="field">
-              <%# <%= f.label :hoge, @comments %><br />
-              <%# <%= f.text_field :hoge, id:"comment_content" %>
+              <% <%= f.label :content, @comments %><br />
+              <% <%= f.text_field :送信する, id:"comment_content" %>
             </div>
             <div class="actions">
-              <%# <%= f.submit "送信する", class: :form__btn  %>
+              <% <%= f.submit "送信する", class: :form__btn  %>
             </div>
-          <%# <% end %>
+          <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
             <li class="comments_list">
-              <%# <%= " コメントのテキスト "%>
-              <%# <%= link_to "（ ユーザー名 ）", root_path, class: :comment_user %>
+              <%= content.text %>
+              <%= link_to comment.user , root_path, class: :comment_user %>
             </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
+          <%= comment.text %>
         </ul>
       </div>
     </div>
