--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -32,24 +32,25 @@
       </div>
       <div class="prototype__comments">
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
-          <%= form_with model: comments,local: true do |f|%>
+          <%= form_with(model: [@prototype, @comment], local: true) do |f|%>
             <div class="field">
-              <% <%= f.label :content, @comments %><br />
-              <% <%= f.text_field :送信する, id:"comment_content" %>
+              <%= f.label :content, "コメント" %><br />
+              <%= f.text_field :content, id:"comment_content" %>
             </div>
             <div class="actions">
-              <% <%= f.submit "送信する", class: :form__btn  %>
+              <%= f.submit "送信する", class: :form__btn  %>
             </div>
           <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
+           <% @comments.each do |comment| %>
             <li class="comments_list">
-              <%= content.text %>
-              <%= link_to comment.user , root_path, class: :comment_user %>
+               <%= comment.content %>
+              <%= link_to current_user.name, root_path, class: :comment_user %>
             </li>
+            <% end %>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
-          <%= comment.text %>
         </ul>
       </div>
     </div>
