--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,7 @@
       <p class="prototype__hedding">
         <%= @prototype.title%>
       </p>
-      <%= link_to "by #{current_user.name}", root_path, class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.name}", root_path, class: :prototype__user %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
@@ -31,6 +31,7 @@
         </div>
       </div>
       <div class="prototype__comments">
+        <% if user_signed_in? %>
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
           <%= form_with(model: [@prototype, @comment], local: true) do |f|%>
             <div class="field">
@@ -41,13 +42,14 @@
               <%= f.submit "送信する", class: :form__btn  %>
             </div>
           <% end %>
+           <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
            <% @comments.each do |comment| %>
             <li class="comments_list">
                <%= comment.content %>
-              <%= link_to current_user.name, root_path, class: :comment_user %>
+              <%= link_to comment.user.name, root_path, class: :comment_user %>
             </li>
             <% end %>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
